[package]
name = "cepa_routing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cepa_common = { path = "../cepa_common"}

aes-gcm = "0.10.1"
rand = "0.8.5"
rsa = "0.8.2"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10.6"
